package demo.ht.com.design_pattern.memento_pattern.demo01;

/**
 * @author 正在蜕变的CV工程师
 * @ClassName Memento
 * 时间: 2021/1/25 10:13
 * CSDN:https://blog.csdn.net/weixin_44819566
 * 公众号:码上变有钱
 *
 * 备忘录模式
 *
 * 保存状态类
 */
public class Memento {
    public String info;

    public Memento(String info) {
        this.info = info;
    }

}
